assets/styles/block/_hero.scss
.hero-standard h1,
.hero-home h1,
.hero-event h1 {
    font-family: var(--font-bayard);
    font-size: var(--font-size-40);
}

.hero,
.hero-home {
    overflow: hidden;
}

.hero-home .headline {
    position: relative;
    padding: var(--space-64) 0;
}

.hero-home .headline::after {
    content: "";
    position: absolute;
    top: 0;
    right: -48px;
    bottom: 0;
    left: -48px;
    background-image: url(/uploads/hero-collage.png);
    background-size: 100%;
    background-repeat: no-repeat;
    background-position: center center;
    z-index: -10;
}

.subtitle-1,
.subtitle-2 {
    font-weight: 700;
}

.subtitle-2 {
    position: absolute;
    right: -4px;
    bottom: 40px;
    transform: rotate(-3deg);
}

.about-layout .hero img,
.events-layout .hero img,
.ghostnote img,
.makers img,
.subscribe img {
    min-width: 680px !important;
    display: block;
}

.about-layout .hero figure {
    right: -48px;
}

.ghostnote figure {
    left: -120px;
}

.makers figure {
    right: 32px;
}

.subscribe figure {
    left: -144px;
}

@media screen and (min-width: 480px) {
    .hero-standard h1,
    .hero-home h1,
    .hero-event h1 {
        font-size: var(--font-size-72);
    }

    .hero-home .headline {
        padding: var(--space-96) 0;
    }

    .subtitle-2 {
        right: 0px;
        bottom: 52px;
    }
}

@media screen and (min-width: 580px) {
    .hero-standard h1,
    .hero-home h1,
    .hero-event h1 {
        font-size: var(--font-size-72);
    }

    .subtitle-2 {
        right: 24px;
        bottom: 48px;
    }
}

@media screen and (min-width: 640px) {
    .hero-standard h1,
    .hero-home h1,
    .hero-event h1 {
        font-size: var(--font-size-80);
    }

    .subtitle-1,
    .subtitle-2 {
        font-size: var(--font-size-20);
    }

    .subtitle-2 {
        right: 24px;
        bottom: 45px;
    }
}

@media screen and (min-width: 768px) {
    .subtitle-2 {
        bottom: 40px;
    }
}

@media screen and (min-width: 850px) {
    .hero-home .headline {
        padding: var(--space-120) 0;
    }

    .subtitle-2 {
        bottom: 50px;
    }
}

@media screen and (min-width: 1024px) {
    .hero-standard h1,
    .hero-home h1,
    .hero-event h1 {
        font-size: var(--font-size-120);
        position: relative;
        top: -16px;
    }

    .subtitle-1 {
        position: relative;
        top: -16px;
    }
    .subtitle-1,
    .subtitle-2 {
        font-size: var(--font-size-32);
    }
}

@media screen and (min-width: 1280px) {
    .hero-standard h1,
    .hero-home h1,
    .hero-event h1 {
        font-size: 9rem;
    }
    .hero-home .headline {
        padding: var(--space-200) 0;
    }

    .subtitle-2 {
        bottom: 115px;
        right: 100px;
    }
}

